--- a/task2-8.html
+++ b/task2-8.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
-<title> </title>
-</head>
-<body>
+<meta charset="utf-8"/>
+<title> Assignment 2-8 </title>
 <style>
-small{color:green;}
-mark{background-color:orange;}
-h1{text-align: center;}
+    small{color:green;}
+    mark{background-color:orange;}
+    h1{text-align: center;}
 </style>
+</head>
 
-
+<body>
 <h1> This centered heading is <em> emphasied just here </em></h1>
 <p> This is a <del>normal paragraph</del> <b>paragraph of great importance!</b></p>
 <p> Another paragraph with some text that goes from <b>bold to <i>bold and italic</i></b> <i>just italic.</i></p>
