--- a/valid.html
+++ b/valid.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
-<title> Tite of the webpage <title>
+<meta charset="utf-8"/>
+<title> Title of the webpage </title>
 </head>
+
 <body>
 <h2>My awesome basic webpage</h2>
 
