--- a/task2-5.html
+++ b/task2-5.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
+<meta charset="utf-8"/>
 <title >This page definitely has a title</title>
 </head>
 <body>
