--- a/task2-6.html
+++ b/task2-6.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
-<title></title>
+<meta charset="utf-8"/>
+<title> Assignment 2-6 </title>
 </head>
 <body>
 
