--- a/task2-1.html
+++ b/task2-1.html
@@ -4,32 +4,32 @@
 <meta charset="utf-8"/>
 <title> Assignment 2-1 </title>
 <style>
-    red{color:red;}
-    grey{color:grey;}
-    a{color:orange;}
+    h1{color:red;}
     h2 {text-align: center;}
-    sans{font-family: sans-serif;}
-    monospace {font-family: monospace;}
-    marking{color: dimgrey; background-color: pink;}
+    del{color:grey;}
+    a{color:orange;}
+    dimgrey{color: dimgrey; background-color: pink;}
+    p{font-family: sans-serif;}
+    pre{font-family: monospace; font-size: 80%;}
 </style>
 </head>
 
 <body>
-<h1><red> A red heading </red></h1>
+<h1>A red heading</h1>
 <hr>
-<p><sans> All paragraph text is sans-seriff. Links, including
-    this to <a href = "http://nyan.cat"> <yellow>http://nyan.cat</yellow></a>,
-    are orange, while this <grey><del>text which is struck out</del></grey>
-    is grey. <br></br>
-
-    Highlighted text is <marking>dimgrey against pink</marking>
-</sans>
+<p>All paragraph text is sans-seriff. Links, including
+    this to <a href = "http://nyan.cat"> http://nyan.cat</a>,
+    are orange, while this <del>text which is struck out</del>
+    is grey.
 </p>
 
+<p>Highlighted text is <dimgrey>dimgrey against pink</dimgrey></p>
+
 <h2>Level 2 Headings are centred</h2>
-<pre><monospace>
+
+<pre>
 Preformatted text uses the monospace font-family & is 80% normal size.
-</monospace></pre>
+</pre>
 
 </body>
 </html>
