--- a/task2-1.html
+++ b/task2-1.html
@@ -8,8 +8,7 @@
     h2 {text-align: center;}
     del{color:grey;}
     a{color:orange;}
-    dimgrey{color: dimgrey; background-color: pink;}
-    p{font-family: sans-serif;}
+    mark {color:dimgrey; background-color:pink;}
     pre{font-family: monospace; font-size: 80%;}
 </style>
 </head>
@@ -17,13 +16,13 @@
 <body>
 <h1>A red heading</h1>
 <hr>
-<p>All paragraph text is sans-seriff. Links, including
-    this to <a href = "http://nyan.cat"> http://nyan.cat</a>,
-    are orange, while this <del>text which is struck out</del>
-    is grey.
+<p>
+    All paragraph text is in sans-serif. Links, including this link to 
+    <a href = "http://nyan.cat"> http://nyan.cat</a>, are orange,<br/>
+    while this <del> text which is stuck out</del> is grey.
 </p>
 
-<p>Highlighted text is <dimgrey>dimgrey against pink</dimgrey></p>
+<p>Highlighted text is <mark>dimgrey against pink</mark>.</p>
 
 <h2>Level 2 Headings are centred</h2>
 
