--- a/task2-1.html
+++ b/task2-1.html
@@ -6,7 +6,7 @@
 <style>
     h1{color:red;}
     h2 {text-align: center;}
-    del{color:grey;}
+    s{color:grey;}
     a{color:orange;}
     mark {color:dimgrey; background-color:pink;}
     pre{font-family: monospace; font-size: 80%;}
@@ -19,7 +19,7 @@
 <p>
     All paragraph text is in sans-serif. Links, including this link to 
     <a href = "http://nyan.cat"> http://nyan.cat</a>, are orange,<br/>
-    while this <del> text which is stuck out</del> is grey.
+    while this <s> text which is stuck out</s> is grey.
 </p>
 
 <p>Highlighted text is <mark>dimgrey against pink</mark>.</p>
