--- a/task2-1.html
+++ b/task2-1.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
-<html lang = "en">
 <head>
-<meta charset="utf-8"/>
 <title> Assignment 2-1 </title>
 <style>
     h1{color:red;}
     h2 {text-align: center;}
-    s{color:grey;}
+    del{color:grey;}
     a{color:orange;}
     mark {color:dimgrey; background-color:pink;}
     pre{font-family: monospace; font-size: 80%;}
@@ -19,7 +17,7 @@
 <p>
     All paragraph text is in sans-serif. Links, including this link to 
     <a href = "http://nyan.cat"> http://nyan.cat</a>, are orange,<br/>
-    while this <s> text which is stuck out</s> is grey.
+    while this <del> text which is stuck out</del> is grey.
 </p>
 
 <p>Highlighted text is <mark>dimgrey against pink</mark>.</p>
