--- a/task2-1.html
+++ b/task2-1.html
@@ -19,7 +19,7 @@
 <p>
     All paragraph text is in sans-serif. Links, including this link to 
     <a href = "http://nyan.cat"> http://nyan.cat</a>, are orange,<br/>
-    while this <del> text which is stuck out</del> is grey.
+    while this <del> text which is struck out</del> is grey.
 </p>
 
 <p>Highlighted text is <mark>dimgrey against pink</mark>.</p>
