--- a/task2-4.html
+++ b/task2-4.html
@@ -6,7 +6,7 @@
 <title> Assignment 2-4 </title>
 </head>
 
-<body>
+<body class = "titled-background">
 <h1>Fancy background</h1>
 
 <p>This page uses a tiled image to create a pleasant background that's very quick to load.</p>
