--- a/task2-4.html
+++ b/task2-4.html
@@ -6,12 +6,11 @@
 <title> Assignment 2-4 </title>
 </head>
 
-<body class = "titled-background">
+<body class = "tiled-background">
 <h1>Fancy background</h1>
 
-<p>This page uses a tiled image to create a pleasant background that's very quick to load.</p>
-
-<p>The background color is #DCF5F5, and the image file is tiled on top.</p>
+<p>This page uses a tiled image to create a pleasant background that's very quick to load.<br/>
+The background color is #DCF5F5, and the image file is tiled on top.</p>
 
 </body>
 </html>
