--- a/task2-9.html
+++ b/task2-9.html
@@ -32,7 +32,7 @@
 
 <ol type = "i">
 <li>A roman numeral list</li>
-<li>Ans some items</li>
+<li>And some items</li>
 <li>Like this</li>
 </ol>
 
@@ -43,7 +43,18 @@
 </ul>
 
 </li>
-<li>And some items</li>
+<li>And subsequent nested lists</li>
+
+<ul> 
+ 
+<li>Like this</li>
+
+<ol type = "i">
+<li>are also automatically styled the same</li>
+</ol>
+
+</ul>
+
 <li>Like this</li>
 </ol>
 
