--- a/task2-9.html
+++ b/task2-9.html
@@ -21,27 +21,33 @@
     <li class = "internal"><a href = "#about">Darkgrey with Lightgrey Shadow</a></li>
 </ul>
 
-<ol>
+<ol class = "number">
     <li>An numbered list</li>
-    <li>Containing<br/>
-        <ul>
+    <li>Containing
+        <ul class = "square">
             <li>A dotted list</li>
-            <li>Containing<br/>
-                <ol type = "i">
+            <li>Containing
+                <ol class = "roman_numerals">
                     <li>A roman numeral list</li>
                     <li>And some items</li>
                     <li>Like this</li>
                 </ol>
+            </li>
             <li>And some items</li>
             <li>Like this</li>
         </ul>
-    <li>And subsequent nested lists</li>
-        <ul>
-            <li>Like this</li>
-                <ol type = "i">
+    </li>
+
+    <li>And subsequent nested lists
+        <ul class = "square">
+            <li>Like this
+                <ol class = "roman_numerals">
                     <li>are also automatically styled the same</li>
                 </ol>
+            </li>
         </ul>
+    </li>
+
     <li>Like this</li>
 </ol>
 
