--- a/task3.html
+++ b/task3.html
@@ -53,15 +53,15 @@
             <button class = "right" onclick = "hidemain()">MENU</button>
             <h1>Part 3 - Javascript Playground</h1>
             <div id = "mcount" onmouseover = "mouse()"></div>
-            <div id = "posts" class = "post-time" ></div>
+            <div id = "posts"></div>
             <hr />
-            <textarea class = "post-content" rows="4" cols="60">Type your text here...</textarea>
+            <textarea rows="4" cols="60">Type your text here...</textarea>
             <br />
             <div class="controls left">
                 <input type="number" name="quantity" value="1" /><br />
                 <input type="radio" name="color" value="blue" /> Blue<br />
                 <input type="radio" name="color" value="red" /> Red<br />
-                <button type = "button" onclick = "date_and_time()">Post</button>
+                <button onclick = "date_and_time()">Post</button>
             </div>
             <div class="controls left"> 
                 <input type="range" name="visible" min="1" max="10" value="10"/><br />
