--- a/task3.html
+++ b/task3.html
@@ -36,13 +36,8 @@
             hr {clear: both;}
             
             /* Task 3.2 class */
-            .post-time {
-                font-weight: bold;;
-                font-size: 0.8em;
-                color: grey;
-            }
-
-            .post-content {font-family: sans-serif; color: black};
+            .post-time {font-size: 0.8em; font-weight: bold; color: grey;}
+            .post-content {font-family: sans-serif; color: black;}
 
         </style>
     </head>
